--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ammper-app",
+  "name": "seekapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -26,13 +26,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cypress": "^13.6.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.5",
     "highcharts": "^11.3.0",
     "highcharts-react-official": "^3.2.1",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
-    "lucide-react": "^0.330.0",
+    "lucide-react": "^0.474.0",
     "next": "14.1.0",
     "next-i18next": "^15.2.0",
     "next-themes": "^0.2.1",
@@ -42,9 +43,11 @@
     "react-i18next": "^14.0.5",
     "react-icons": "^5.4.0",
     "react-loader-spinner": "^6.1.6",
+    "recharts": "^2.15.0",
     "sweetalert2": "^11.12.4",
     "swr": "^2.2.4",
     "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.5.0"
   },
